# OpenLaoKe

./: .gitignore  AGENTS.md  ARCHITECTURE_SYSTEM_REPORT.md  CHANGELOG.md  COMMANDS.md  COMMAND_HISTORY.md  COMPLETE_SOLUTION_SUMMARY.md  FINAL_SUMMARY.md  IMPROVEMENTS.md  INSTALL.md  MANIFEST.in  README.md  README_CN.md  TOOL_ADAPTER_SOLUTION.md  calculator.py  cpu_benchmark_atomic.py  cpu_benchmark_with_knowledge.py  demo_small_model_development.py  demo_task_decomposition.py  extract_chrome_cookies.py  extract_firefox_cookie.py  extract_glm_cookie.py  generate_docs_pdf.py  generate_pdfs.py  manual_cookie_extractor.py  publish.py  pyproject.toml  quick_auth.py  quick_auth_firefox.py  quick_auth_firefox_simple.py  test_export.json  test_extended_api.py  test_extended_web.py  test_extended_web_all.py  test_firefox_launch.py  test_free_models.py  test_no_tools.py  test_qwen_auth.py  upload_pypi.bat  wechat.md
.codegraph/: daemon.pid
bench/: diff.py  harness.py
c_translation/: publisher.c
data/: gangdan_config.json  user_kbs.json
docs/: COMMANDS.md  COMMAND_HISTORY_FEATURE.md  DUAL_MODEL_CONFIG.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SOLUTION.md  HYPERAUTO_AUTONOMOUS.md  HYPERAUTO_FIX.md  HYPERAUTO_FIX_VERIFIED.md  HYPERAUTO_IMPROVEMENTS.md  HYPERAUTO_REALTIME_PROGRESS.md  INCREMENTAL_VALIDATION_SOLUTION.md  MODEL_OPTIMIZATION.md  MULTILANG_DESIGN.md  PROGRESS_UPDATE.md  PROJECT_ANALYSIS.md  SOTA_EVAL_REPORT.md  TESTING_REPORT.md  TEST_REPORT.md
examples/: memory_demo.py
openlaoke/: __init__.py  __main__.py  knowledge.py  provider.py  tdd.py  trace.py
openlaoke_c/: FINAL_REPORT.md  Makefile  README.md  TRANSLATION_PROGRESS.md  TRANSLATION_REPORT.md  TRANSLATION_SUMMARY.md  main.c  verify_all.sh
scripts/: build.bat  calculator.py  cpu_benchmark_atomic.py  cpu_benchmark_with_knowledge.py  demo_small_model_development.py  eval_code_sota.py  extract_chrome_cookies.py  extract_firefox_cookie.py  extract_glm_cookie.py  generate_docs_pdf.py  generate_figures.py  generate_pdfs.py  guide_gemma3.py  manual_cookie_extractor.py  quick_auth_firefox.py  quick_auth_firefox_simple.py  test_extended_api.py  test_extended_web_all.py  test_firefox_launch.py  test_free_models.py  test_no_tools.py  test_qwen_auth.py  upload_pypi.sh
test_cpu_benchmark/: cpu_benchmark.py
tests/: __init__.py  conftest.py  local_model_benchmark.py  test_agent_memory.py  test_bus.py  test_comprehensive.py  test_control.py  test_core.py  test_features.py  (+11 more)
(+403 files in other folders)
