[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openlaoke"
dynamic = ["version"]
description = "Open-source terminal AI coding assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "OpenLaoKe Contributors" },
]
keywords = ["ai", "coding", "assistant", "cli", "repl", "agent", "mcp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "mcp>=1.0.0",
    "aiofiles>=24.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "watchfiles>=1.0",
    "tiktoken>=0.8",
    "jsonschema>=4.23",
    "chardet>=5.2",
    "pathspec>=0.12",
    "setproctitle>=1.3",
    "websockets>=14.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "build>=1.2",
    "twine>=6.0",
]
local = [
    "llama-cpp-python>=0.3.0",
]

[project.scripts]
openlaoke = "openlaoke.entrypoints.cli:main"
openlaoke-post-install = "openlaoke.hooks.post_install:post_install"

[project.urls]
Homepage = "https://github.com/OpenLaoKe/OpenLaoKe"
Repository = "https://github.com/OpenLaoKe/OpenLaoKe"
Issues = "https://github.com/OpenLaoKe/OpenLaoKe/issues"

[tool.setuptools.dynamic]
version = { attr = "openlaoke.__version__" }

[tool.setuptools.packages.find]
include = ["openlaoke*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
